tests/NormalTests/paczka1/fuzzy1/27451464.err
Error in line 7: a8rtCGRx9xf S317 61,3
Error in line 6: l6c3 S317 66,3
Error in line 12: ggL7PbCCBaY A172 23,4
Error in line 16: W16EBrlOK S317 50,1
Error in line 30: Un7B4x A680 18,47
Error in line 31: a8rtCGRx9xf A172 89,4
Error in line 37: Fu70xIellDE S406 -3,3
